Base file layout?

--- a/css/application.css
+++ b/css/application.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=application.css.map */
+.img__grey{filter:grayscale(1)}.img__grey:hover{filter:grayscale(0)}/*# sourceMappingURL=application.css.map */
