Restructured layout, added initial icomoon support and implemented fonts.

--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,3 +1,5 @@
+@import "container";
+@import "footer";
 @import "grid";
-@import "images";
-@import "icons";
+@import "header";
+@import "sidebar";
