--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,2 +1,11 @@
-$font-family-primary: sans-serif;
-$font-family-secondary: serif;
+$font-links: (
+    "poppins": 'https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap',
+);
+
+// Import every font link
+@each $family, $url in $font-links {
+    @import url(#{$url});
+}
+
+// Font family
+$font-family--primary: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
