Improved header and footer

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,6 @@
 // background colour, theme switcher, page styles ect.
 
-* {
-    font-family: $font-family--primary;    
+main {
+    margin-left: 3%;
+    margin-right: 3%;
 }
