--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -4,3 +4,7 @@
 $screen-small: 50px;
 $screen-medium: 768px; //Mobile
 $screen-large: 500px;
+
+// COLOURS
+$color-secondary: #323544;
+$colour-secondary-dark: #212330;
