Completed base work on the footer, started on the header, added a toggable sidebar and basic javascript support.

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,4 @@
 footer {
-    display: block;
-    margin-bottom: -20px;
     background-color: $color-secondary;
     color: white;
     img {
@@ -11,26 +9,66 @@ footer {
     h1 {
         text-transform: uppercase;
         font-size: medium;
-        text-align: center;
+        text-align: left;
     }
 
     ul {
         list-style: none;
         text-align: left;
+        padding: 0;
+    }
+
+
+
+
+    .footer-links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: stretch;
+        flex-grow: 2;
+    }
+
+    #footer-logo {
+        margin-top: 10px;
+        order: 1;
+        max-width: 100%;
+        height: auto;
+    }
+
+    .footer-links--follow {
+
+        order: 2;
+        button{
+            display: inline-flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 72px;
+            max-width: 35%;
+            height: 64px;
+        }
+
+    }
+
+    .footer-links--section {
+        margin: 15px;
+        order: 3;
+        max-width: 35%;
+        align-items: stretch;
     }
 
 
     .footer-copyright {
+        display: inline-block;
         background-color: $colour-secondary-dark;
-    }
-
-    .footer-links--section {
-        max-width: 300px;
-        align-items: stretch;
-        display: inline-flex;
-        flex-direction: column;
+        width: 100%;
+        text-align: center;
     }
 
     @media (max-width: $screen-medium) {
+        .footer-links--section{
+            max-width: calc(50% - 4px);
+        }
     }
 }
