--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -3,8 +3,9 @@
 // MEDIA/SCREEN SIZE
 $screen-small: 50px;
 $screen-medium: 768px; //Mobile
-$screen-large: 500px;
+$screen-large: 1260px;
 
 // COLOURS
 $color-secondary: #323544;
 $colour-secondary-dark: #212330;
+$color-sidebar: #333645;
