--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -5,14 +5,13 @@
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 1fr auto;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 10em 1fr auto;
     grid-template-areas: 
     "header sidebar"
     "main sidebar"
     "footer sidebar";
 }
-
 
 header {
     grid-area: header;
