--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -29,19 +29,22 @@ main {
 aside {
     grid-area: sidebar;
 
-    right: 0;
-    height: 100vh;
+    right: -100%;
+    height: 100dvh;
+    width: min(15em, 100%);
+    z-index: 10;
+
     overflow: auto;
     text-wrap: wrap;
     background-color: #333645;
 
-    width: 300px;
     position: fixed;
-    display: none;
+    right: -16em;
+    transition: right 500ms ease-in-out;
 }
 
 .showSidebar {
-    display: block;
+    right: 0;
 }
 
 footer {
