--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -24,7 +24,7 @@ header {
 
 // Bottom part with nav elements
 .main-nav {
-    background-color: $color-secondary;
+    background-color: $color-primary;
     color: white;
     display: flex;
     flex-direction: row;
