--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -6,6 +6,6 @@ $screen-medium: 768px; //Mobile
 $screen-large: 1260px;
 
 // COLOURS
-$color-secondary: #323544;
-$colour-secondary-dark: #212330;
+$color-primary: #323544;
+$colour-primary-dark: #212330;
 $color-sidebar: #333645;
