--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -9,3 +9,4 @@ $screen-large: 1260px;
 $color-primary: #323544;
 $colour-primary-dark: #212330;
 $color-sidebar: #333645;
+$color-accent: rgb(146, 111, 177);
