--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,10 +3,6 @@
     box-sizing: border-box;
 }
 
-body {
-    margin-left: 3%;
-    margin-right: 3%;
-}
 
 .section-heading {
     display: grid;
@@ -17,16 +13,65 @@ body {
     }
 }
 
-// Banner
-.banner {
-    width: 100%;
-    margin-right: 0px;
+.has-main-margin {
+    margin-left: 5em;
+    margin-right: 5em;
+}
 
-    .banner-item {
+// Banner
+.banner-roulette {
+    width: 100dvw;
+    height: 60dvh;
+
+}
+
+.banner-item-content {
+
+    color: white;
+    h1, h2, p, button {
+        margin-left: 15rem;
+        @media (max-width:$screen-large){
+            width: 100%;
+            margin-left: 5rem;
+        }
+        @media (max-width:$screen-medium){
+            margin-left: 1rem;
+            font-size: 1rem;
+        }
+        
+        height: 100%;
     }
-    .active {
-        background-image: url("/img/banner/home-6yTp.webp");
-        height: 60px;
+    h1, h2 {
+        width: 60%;
+        text-wrap: wrap;
+    }
+    h1 {
+        font-size: 3rem;
+    }
+    button {
+        @include buttonstyles;
+        &::after {
+            content: " ➙";
+        }
+    }
+
+}
+
+// Set the banner's specific stuff here
+.active-banner {
+    height: inherit;
+    width: inherit;
+
+    display: flex;
+    align-items: center;
+
+
+    background-image: linear-gradient(270deg, rgba(0, 0, 0, 0) 25%, rgb(0, 0, 0)),
+    url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");    
+
+
+    button {
+        background-color: $color-accent;
     }
 }
 
@@ -34,6 +79,11 @@ body {
 .content-items {
     display: flex;
     flex-wrap: wrap;
+
+    button {
+        @include buttonstyles;
+        background-color: wheat;
+    }
 }
 
 .major {
