--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -6,7 +6,7 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: 10em 1fr auto;
+    grid-template-rows: 8.5rem 1fr auto;
     grid-template-areas: 
     "header sidebar"
     "main sidebar"
