--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,6 +7,8 @@ header {
         text-decoration-line: none;
     } 
     z-index: 10;
+
+
 }
 
 // Top part with logo
@@ -17,6 +19,11 @@ header {
     justify-content: center;
     align-content: stretch;
     margin: 10px;
+
+    button, input[type="submit"] {
+        @include buttonstyles;
+        background-color: $color-accent;
+    }
 }
 
 .header-logo {
