--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
+
 
 .section-heading {
     display: grid;
@@ -29,16 +33,7 @@
 
     color: white;
     h1, h2, p, button {
-        margin-left: 15rem;
-        @media (max-width:$screen-large){
-            width: 100%;
-            margin-left: 5rem;
-        }
-        @media (max-width:$screen-medium){
-            margin-left: 1rem;
-            font-size: 1rem;
-        }
-        
+
         height: 100%;
     }
     h1, h2 {
