--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -13,3 +13,7 @@ $font-family--primary: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif
 * {
     font-family: $font-family--primary;
 }
+
+button, input {
+    font-family: $font-family--primary;
+}
