--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -1,18 +1,18 @@
 // Small classes for commonly used blocks of code
 
-.mobile-hidden {
-    display: none;
-}
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 
-// Used to align content to left, right or middle of the viewport
-.align-left {
-    
-}
-
-.align-right {
-
-}
-
-.align-middle {
-    
+    @media (min-width: $screen-small) {
+        width: 750px;
+    }
+    @media (min-width: $screen-medium) {
+        width: 970px;
+    }
+    @media (min-width: $screen-large) {
+        width: 1200px;
+    }
 }
