--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -8,7 +8,8 @@
     align-items: center;
 
     // Background stuff here for now, should be in .active-banner
-    background-position: center center;    
+    background-position: center center; 
+    background-repeat: no-repeat;
     background-image: linear-gradient(270deg, rgba(0, 0, 0, 0) 25%, rgb(0, 0, 0)),
     url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");    
 }
@@ -32,15 +33,6 @@
         width: 75%;
         font-size: 1.3rem;
         line-height: 2rem;
-    }
-    button {
-        @include buttonstyles;
-        margin-top: 1rem;
-        margin-bottom: 2rem;
-        margin-left: 0;
-        &::after {
-            content: " ➙";
-        }
     }
 
     @media (max-width: $screen-large){
@@ -72,7 +64,13 @@
 // Set the banner's specific stuff here
 .active-banner {
     button {
-        background-color: $color-accent;
+        @include buttonstyles($color-accent);
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        margin-left: 0;
+        &::after {
+            content: " ➙";
+        }
     }
 }
 
