--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -25,8 +25,7 @@ header {
     }
 
     button, #button-search {
-        @include buttonstyles;
-        background-color: $color-button-grey;
+        @include buttonstyles($color-button-grey);
         height: 56px;
         flex-grow: 1;
     }
@@ -34,9 +33,16 @@ header {
         width: 200px;
         flex-grow: 2;
         height: 56px;
+        border: 2px solid $color-button-grey;
+        border-radius: 3px 0px 0px 3px;
+    }
+    #button-search {
+        margin-left: 0;
+        border-radius: 0 3px 3px 0;
     }
     #button-support {
-        background-color: $color-button-support;
+        @include buttonstyles($color-button-support);
+        height: 56px;
     }
     #header-logo {
         margin-top: 10px;
