--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -55,7 +55,7 @@ header {
 .main-nav {
     height: 100px;
     background-color: $color-primary;
-    color: white;
+    color: $white;
 
     .main-nav-list {
 
