--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -41,7 +41,7 @@ aside {
     
         // Nav item text
         a {
-            color: white;
+            color: $white;
             display: flex;
             flex-direction: column;
             align-items: center;
