--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
 
-    color: white;
+    color: $white;
     
     h1, h2 {
         font-weight: 600;
