--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -4,7 +4,7 @@
     text-transform: uppercase;
     width: fit-content;
     height: 62px;
-    color: white;
+    color: $white;
     background-color: $background-colour;
     border: none;
     border-radius: 3px;
@@ -19,11 +19,19 @@
     }
 }
 
+@mixin buttoniconstyles() {
+    display: grid;
+    place-items: center;
+    justify-content: center;
+    font-size: 36px;
+    text-decoration: none;
+}
+
 @mixin nav-item-colors($color) {
     &:hover {
         background-color: $color;
         &::before {
-            color: white;
+            color: $white;
         }    
     }
     
