--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -7,6 +7,8 @@ $screen-medium: 992px;
 $screen-large: 1200px;
 
 // COLOURS
+
+// UI
 $color-primary: #323544;
 $colour-primary-dark: #212330;
 $colour-primary-light: #333645;
@@ -14,10 +16,14 @@ $colour-primary-light: #333645;
 $color-sidebar: #333645;
 $color-accent: rgb(146, 111, 177);
 
+$white: white;
+
+// BUTTONS
 $color-button-support: #4183d7;
 $color-button-grey: #999aa2;
 $color-button-border: rgba(255, 255, 255, 0.1);
 
+// NAV ICONS
 $colour-sof: rgb(103, 128, 159);
 $colour-sup: rgb(65, 131, 215);
 $colour-mar: rgb(46, 204, 113);
@@ -26,6 +32,13 @@ $colour-des: rgb(146, 111, 177);
 $colour-sec: rgb(246, 36, 89);
 $colour-dev: rgb(206, 65, 37);
 
+// BANNER DOTS
 $color-dot-inactive: hsla(0,0%,100%,.5); 
 $color-dot-hover: darken($color-dot-inactive, 25%);
 $color-dot-active: white;
+
+// SOCIAL COLOURS
+$colour-social-fb: #3b5998;
+$colour-social-li: #0077b5;
+$colour-social-tw: #00aced;
+$colour-social-ig: #d93175;
