--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,4 +15,13 @@ body {
     h1, h2 {
         margin: 0;
     }
+    h2 {
+        &::after {
+            content: " ➙";
+        }
+        &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    }
 }
