--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -5,18 +5,99 @@ main {
 }
 
 // Services
+.content-services {
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+}
 .content-items {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+}
 
-    button {
-        @include buttonstyles(blue);
+.content-item-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    
+    height: 100%;
+    padding: 20px;
+
+    border: 1px solid gray;
+    border-radius: 15px;
+    
+    h3, p {
+        margin: 10px;
+        font-weight: 300;
     }
+    p {
+        font-size: 0.8rem;
+    }
+
+    .content-item__icon {
+        font-size: 42px;
+        width: 65px;
+        height: 65px;
+        border-radius: 100%;
+        padding: 8px; 
+    }
+
+
+    // Color variations
+    &#sof { 
+        .content-item__icon{ color: $white; background-color: $colour-sof; } 
+        button { @include buttonstyles($colour-sof); }
+    }
+    &#sup { 
+        .content-item__icon{ color: $white; background-color: $colour-sup; } 
+        button { @include buttonstyles($colour-sup); }
+    }
+    &#mar { 
+        .content-item__icon{ color: $white; background-color: $colour-mar; } 
+        button { @include buttonstyles($colour-mar); }
+    }
+    &#ser { 
+        .content-item__icon{ color: $white; background-color: $colour-ser; } 
+        button { @include buttonstyles($colour-ser); }
+    }
+    &#des { 
+        .content-item__icon{ color: $white; background-color: $colour-des; } 
+        button { @include buttonstyles($colour-des); }
+    }
+    &#sec { 
+        .content-item__icon{ color: $white; background-color: $colour-sec; } 
+        button { @include buttonstyles($colour-sec); }
+    }
+    &#dev { 
+        .content-item__icon{ color: $white; background-color: $colour-dev; } 
+        button { @include buttonstyles($colour-dev); }
+    }
+
+    &:hover {
+        color: $white;
+        border: none;
+
+        &#sof{ @include hoverColourChange($colour-sof); }
+        &#sup{ @include hoverColourChange($colour-sup); }
+        &#mar{ @include hoverColourChange($colour-mar); }
+        &#ser{ @include hoverColourChange($colour-ser); }
+        &#des{ @include hoverColourChange($colour-des); }
+        &#sec{ @include hoverColourChange($colour-sec); }
+        &#dev{ @include hoverColourChange($colour-dev); }
+        
+        transition: 0.25s ease-in-out;
+    }
+
 }
 
 .major {
-    flex-grow: 2;
+    max-width: 370px;
 }
 .minor {
-    flex-grow: 1;
+    max-width: 270px;
 }
