--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -16,6 +16,7 @@ $colour-primary-light: #333645;
 $color-sidebar: #333645;
 $color-accent: rgb(146, 111, 177);
 
+$colour-heading: rgb(51, 54, 69);
 $white: white;
 
 // BUTTONS
