--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,11 +11,20 @@ body {
 .section-heading {
     display: grid;
     grid-template-columns: 1fr auto;
+    align-items: center;
+    margin-bottom: 50px;
 
     h1, h2 {
         margin: 0;
+        font-weight: 400;
+        color: $colour-heading;
+        font-size: 2.25rem;
     }
     h2 {
+        font-weight: 600;
+        font-size: 1.8rem;
+        padding-top: 5px;
+
         &::after {
             content: " ➙";
         }
@@ -24,4 +33,15 @@ body {
             cursor: pointer;
         }
     }
+
+
+    @media (max-width: $screen-small) {
+        h1{
+            font-size: 1.7rem;
+        }
+        h2 {
+            font-size: 1.4rem;
+        }
+    }
+
 }
